# Sci_Prog_Group_Assignment

./: .gitattributes  .gitignore  LICENSE  README.md  main_code.py  pyproject.toml  requirements.txt
src/: functions.py
tests/: test_data.py
